Revision history for Perl extension Module::Build.

0.27_03

 - Our POD parser will now accept "AUTHORS" as well as "AUTHOR" when
   looking for the author list in a module. [David Wheeler]

 - The recommended dependency on ExtUtils::ParseXS has been moved into
   the "C_support" auto_feature.

 - The synonyms 'scripts' and 'prereq' for 'script_files' and
   'requires' were broken in a previous version (0.27_01, probably),
   but now they're fixed. [David Golden]
 
 - Previously, we assumed that any custom subclass of Module::Build
   was located in _build/lib/.  This is only true if the author used
   the subclass() method, though.  We now use %INC to find where the
   custom subclass really is, so that we can "use lib" it.  We also
   issue a warning if it seems to be outside the build directory.
   [Spotted by Peter Tandler]

 - Added a dir_contains() method.

 - If the user passes a no_index parameter to our constructor, we now
   pass that through when building the META.yml file. [Richard
   Soderberg, RT #9603]

 - Some versions of MakeMaker, CPANPLUS, and/or PAUSE thought that a
   certain line of our code was declaring a $VERSION when we didn't
   intend to.  The line has been obscurified so they won't think that
   anymore. [Jos Boumans, RT #14226]

 - We now use ExtUtils::CBuilder to do all compiling of C code (for
   example, when compiling XS modules).  (This change actually
   occurred in 0.27_01, but it was mistakenly omitted from the Changes
   file.)

 - Fixed an issue on Win32 (and other case-tolerant
   non-case-preserving systems, possibly like VMS?) in which the
   current working directory would sometimes be reported with
   different case, fooling us into thinking that we were in the wrong
   directory. [David Golden]

 - Added the Apache, MIT, and Mozilla licenses to the list of licenses
   that this module knows about. [Bob Ippolito]

 - Added a URL for each license type that we know about, which will